@@ -38,7 +38,6 @@ public interface BashTokenTypes {
     IElementType NUMBER = new BashElementType("number");
     IElementType WORD = new BashElementType("word");
     IElementType ASSIGNMENT_WORD = new BashElementType("assignment_word"); //"a" =2
-    //IElementType ARRAY_ASSIGNMENT_WORD = new BashElementType("array_assignment_word");//"a[1]" =1
     IElementType DOLLAR = new BashElementType("$");
 
     IElementType LEFT_PAREN = new BashElementType("(");
@@ -230,7 +229,6 @@ public interface BashTokenTypes {
 
     IElementType STRING2 = new BashElementType("unevaluated string");
     IElementType BACKQUOTE = new BashElementType("backquote `");
-    //IElementType INTERNAL_COMMAND = new BashElementType("internal bash command");
 
     IElementType INTEGER_LITERAL = new BashElementType("int literal");
 
